--- a/app/src/main/res/layout/fragment_tou_double.xml
+++ b/app/src/main/res/layout/fragment_tou_double.xml
@@ -142,8 +142,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/dp_10"
-                        android:layout_marginRight="@dimen/dp_10"
                         android:layout_marginTop="@dimen/dp_6"
+                        android:layout_marginRight="@dimen/dp_10"
                         android:text="当前重量(kg)：15.00"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_12"
@@ -212,8 +212,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_10"
-                        android:text="当前重量(kg)：15.00"
                         android:layout_marginTop="@dimen/dp_6"
+                        android:text="当前重量(kg)：15.00"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_12"
                         android:textStyle="bold"
@@ -292,10 +292,10 @@
                 android:id="@+id/aciv_code"
                 android:layout_width="@dimen/dp_130"
                 android:layout_height="@dimen/dp_130"
-                tools:src="@drawable/ic_erweima"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                tools:src="@drawable/ic_erweima" />
 
             <!--手机号-->
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -353,6 +353,18 @@
                 app:layout_constraintRight_toRightOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!--状态-->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/aciv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_gzda" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
