--- a/app/src/main/res/layout/fragment_tou_single.xml
+++ b/app/src/main/res/layout/fragment_tou_single.xml
@@ -260,6 +260,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_2"
             android:text="关闭"
+            android:visibility="gone"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_15"
             android:textStyle="bold"
